--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import "./styles/colors";
+
 * {
     font-weight: 400;
     font-size: 16px;
@@ -6,11 +8,9 @@
 
 button {
     /* txt color */
-    background: #000000;
-    /* strokes-primary */
-    /* background-primary */
-    color: #FFFFFF;
-    border: 1px solid #D5D5D5;
+    background: $text-color;
+    color: $background-primary;
+    border: 1px solid $strokes-primary;
     border-radius: 5px;
     width: 100%;
     height: 100%;
@@ -21,13 +21,13 @@ button {
     justify-content: center;
 
     &:disabled {
-        background: #D5D5D5;
+        background: $strokes-primary;
     }
 }
 
 a {
     text-decoration: none;
-    color: black;
+    color: $text-color;
 }
 
 input {
@@ -37,19 +37,32 @@ input {
 }
 
 .input {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    padding: 0 20px;
-    height: 50px;
-    /* background-primary */
-
-    background: #FFFFFF;
-    /* gray */
-
-    border: 1px solid #838383;
+    background-color: $background-primary;
+    outline: none;
+    border: 1px solid $gray;
     border-radius: 5px;
+    color: $text-color;
+    font-weight: 400;
+    line-height: 160%;
+    padding: 16px 25px;
+    display: flex;
+    gap: 15px;
+    position: relative;
+
+
+    .inputField {
+        border: none;
+        outline: none;
+        width: 100%;
+    }
+
+    &::placeholder {
+        color: $gray;
+    }
+}
+
+.inputError {
+    border-color: $error;
 }
 
 .loader {
