--- a/pages/auth/Auth.module.scss
+++ b/pages/auth/Auth.module.scss
@@ -1,8 +1,12 @@
+@import "../../styles/colors";
+
+
 .wrapper {
   display: grid;
-  background: #F3F3F3;
+  background: $background-secondary;
   height: calc(100vh - 80px - 72px);
   padding-top: 139px;
+
   .formBox {
     display: grid;
     gap: 25px;
@@ -10,12 +14,9 @@
     max-height: 317px;
 
     width: 400px;
-    /* background-primary */
+    background: $background-primary;
 
-    background: #FFFFFF;
-    /* strokes-secondady */
-
-    border: 1px solid #E6E6E6;
+    border: 1px solid $strokes-secondary;
     border-radius: 5px;
     padding: 30px;
 
@@ -25,11 +26,16 @@
       line-height: 140%;
     }
 
+    .formError {
+      color: $error;
+      font-size: 13px;
+    }
+
     .form {
       display: grid;
       gap: 15px;
       .error {
-        color: #F00000;
+        color: $error;
         font-weight: 300;
         font-size: 12px;
       }
@@ -43,7 +49,7 @@
 @media (max-width: 465px) {
   .wrapper {
     padding: 30px;
-    background-color: #fff;
+    background-color: $background-primary;
     .formBox {
       padding: 0;
       border: none;
