--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,6 +30,13 @@ a {
     color: $text-color;
 }
 
+.footerLink {
+    color: $text-color;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+
 input {
     border: none;
     outline: none;
@@ -44,11 +51,12 @@ input {
     color: $text-color;
     font-weight: 400;
     line-height: 160%;
-    padding: 16px 25px;
+    padding: 0 25px;
     display: flex;
     gap: 15px;
     position: relative;
-
+    height: 50px;
+    align-items: center;
 
     .inputField {
         border: none;
