--- a/pages/profile/Profile.module.scss
+++ b/pages/profile/Profile.module.scss
@@ -180,6 +180,13 @@
   }
 }
 
+.errorContainer {
+  width: 100%;
+  display: grid;
+  justify-content: center;
+  padding: 130px 0;
+}
+
 @media (max-width: 590px) {
   .profile {
     .container {
