--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,6 @@
+@import "./styles/colors";
+
+
 .home {
   padding: 50px 240px;
 
@@ -14,7 +17,7 @@
       display: grid;
 
       &:last-child {
-        border-bottom: 1px solid #E6E6E6;
+        border-bottom: 1px solid $strokes-secondary;
       }
 
       .usersItem {
@@ -23,7 +26,7 @@
         align-items: center;
         gap: 20px;
         padding: 10px 0;
-        border-top: 1px solid #E6E6E6;
+        border-top: 1px solid $strokes-secondary;
 
         .info {
           display: flex;
