--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -75,6 +75,7 @@ input {
 
 .loader {
     display: grid;
+    padding-top: 130px;
     justify-content: center;
     align-items: center;
     height: 100%;
