--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -31,6 +31,7 @@
         .info {
           display: flex;
           justify-content: space-between;
+          align-items: center;
           flex-wrap: wrap;
 
           .name {
